<resources>
    <string name="alert_exit_app">もう一度タップしてアプリを終了します</string>
    <string name="Register">登録</string>
    <string name="appName">アルバムメーカー</string>
    <string name="Edit">編集</string>
    <string name="Delete">削除</string>
    <string name="Add">追加</string>
    <string name="Comment">コメント</string>
    <string name="Cancel">キャンセル</string>
    <string name="error_input_data">虚偽または不完全にインポートしました</string>
    <string name="error_email_or_password_empty">メールアドレスとパスワードを入力してください</string>
    <string name="error_email_or_password_incorrect">ユーザー名またはパスワードが正しくありません</string>
    <string name="error_email_invalid">メールアドレスを正しく入力してください</string>
    <string name="error_password_invalid">メールアドレスを正しく入力してください</string>
    <string name="error_system_error">エラーが発生して、再試行します</string>
    <string name="error_alert">エラーインポート</string>
    <string name="msg_loading">読み込み中</string>
    <string name="confirm_ok">OK</string>
    <string name="hint_full_name">氏名</string>
    <string name="hint_department">デパート</string>
    <string name="hint_position">お仕事立ち位置</string>
    <string name="hint_email">メールアドレス</string>
    <string name="hint_password">パスワード</string>
    <string name="forgot_password">パスワードを忘れた方</string>
    <string name="create_account">新しいアカウントを作成</string>
    <string name="login">ログイン</string>
    <string name="logout">ログアウト</string>
    <string name="Customer">顧客</string>
    <string name="HouseId">物件No</string>
    <string name="NewHouse">新しい</string>
    <string name="OldHouse">古い</string>
    <string name="setting_name">設定</string>
    <string name="On">オン</string>
    <string name="Off">オフ</string>
    <string name="comment_by_voice">声でコメント</string>
    <string name="Language">言語</string>
    <string name="Vietnamese">Vietnamese</string>
    <string name="English">English</string>
    <string name="Japanese">日本語</string>
    <string name="Picture">詳細写真</string>
    <string name="setting_save">変更保存</string>
    <string name="save_setting_success">設定が保存されました</string>
    <string name="view_all_album">既存アルバム確認</string>
    <string name="add_new_house">新規アルバム作成</string>
    <string name="hint_password_confirm">パスワードを認証</string>
    <string name="image_size">写真サイズ</string>
    <string name="Size_1">1MB</string>
    <string name="Size_2">2MB</string>
    <string name="Size_3">3MB</string>
    <string name="complete_update_setting">設定を完全に更新しました</string>
    <string name="House_Id">物件No</string>
    <string name="add_comment">コメントを追加</string>
    <string name="add_image">画像を追加</string>
    <string name="add_location">位置追加</string>
    <string name="add_location_take_photo_fail">写真が撮れない場所を追加してください</string>
    <string name="address">住所</string>
    <string name="album_detail">詳細アルバム</string>
    <string name="apartment">マンション</string>
    <string name="camera">写真撮影</string>
    <string name="cancel">キャンセル</string>
    <string name="capture_image">写真を撮ります</string>
    <string name="choose_method_image_selection">写真を撮る方法を選択してください</string>
    <string name="chose_again">もう一度やり直してください</string>
    <string name="create_album">新しいアルバムを作成</string>
    <string name="create_house_done">新しいアルバムを作成済み</string>
    <string name="create_house_fail">アルバムの作成でエラーが発生しました</string>
    <string name="create_house_info_fail">アルバムの情報を作成でエラーが発生しました</string>
    <string name="delete">削除</string>
    <string name="edit_comment">コメント編集</string>
    <string name="error_address_empty">アドレスが入力されていませんから、ご入力ください</string>
    <string name="error_chose_location_take_images">撮影位置を選択してください。</string>
    <string name="error_chose_type_house">家のタイプを選択してください！</string>
    <string name="error_number_contract_empty">契約番号が入力されていませんから、ご入力ください</string>
    <string name="error_owner_empty">所有者が入力されていませんから、ご入力ください</string>
    <string name="gallery">ギャラリー</string>
    <string name="general_comment">一般的なコメント</string>
    <string name="get_room_type_fail">部屋タイプの取得に失敗しました</string>
    <string name="house">戸建て</string>
    <string name="house_info">物件情報</string>
    <string name="list_album">アルバム一覧</string>
    <string name="location_to_take_picture">撮影位置</string>
    <string name="not_empty">編集テキストを必ず入力してください</string>
    <string name="number_contract">契約No</string>
    <string name="owner">所有者</string>
    <string name="please_enter_comment">コメントを入力してください</string>
    <string name="please_enter_location">撮影位置を入力してください</string>
    <string name="remove">削除</string>
    <string name="room">撮影位置 </string>
    <string name="room_comment">部屋コメント</string>
    <string name="save">保存</string>
    <string name="seconds_remaining">"残り秒 "</string>
    <string name="speech_not_supported">お使いのデバイスは音声入力をサポートしていません</string>
    <string name="speech_prompt">何か言ってください</string>
    <string name="start">開始</string>
    <string name="type_house">物件タイプ</string>
    <string name="update_comment_fail">コメントの更新に失敗しました</string>
    <string name="upload_image_fail">既存アルバム確認</string>
    <string name="ForgotPassword">パスワードを忘れた方</string>
    <string name="error_email_format_not_true">メールアドレスを正しく入力してください</string>
    <string name="error_permission">許可されていないアクセス</string>
    <string name="grant_permission_camera">続行するには、カメラとストレージへのアクセスを許可してください</string>
    <string name="permission_denied">許可が拒否されました</string>
    <string name="go_setting">設定の場面に移動</string>
    <string name="grant_was_denied">許可が拒否されました</string>
    <string name="access_camera">カメラとストレージ アクセス許可できません</string>
    <string name="grant_permission_mic">続行するには、マイクへのアクセスを許可してください</string>
    <string name="access_mic">マイクアクセス許可できません</string>
    <string name="hint_search">検索</string>
    <string name="warning_logout">警告 ログアウト</string>
    <string name="warning_logout_content">ログアウトしてもよろしいでしょうか。</string>
    <string name="confirm_yes">よし</string>
    <string name="confirm_no">"いいえ  "</string>
    <string name="upload_successful">アップロードしました。</string>
    <string name="uploading">アップロード中</string>
    <string name="EditHouse">アルバム編集</string>
    <string name="alert_delete_fail">削除できません。</string>
    <string name="alert_delete_image_success">写真が削除されました。</string>
    <string name="max_value_upload">アップロードできる最大数は %d です。</string>
    <string name="upload_image_again">この画像をもう一度アップロードしたいですか？</string>
    <string name="upload_fail">アップロード失敗</string>
    <string name="tap_to_speak">マイクをタップして話します。</string>
    <string name="tap_to_stop">停止するにはマイクをタップします。</string>
    <string name="next">次</string>
    <string name="location_already_exists">撮影位置はすでに存在しています。</string>
    <string name="hint_please_import_email">メールアドレスを入力します。</string>
    <string name="see_more">もっと見る</string>
    <string name="session_was_expired">セッションの有効期限が切れています。</string>
    <string name="preview_image">プレビュー</string>
    <string name="alert_saving_data">終了すると、変更されたすべてのデータが失われます。</string>
    <string name="finger_login">Finger Login</string>

    <string name="text">Text</string>
    <string name="brush">Brush</string>
    <string name="sticker">Sticker</string>
    <string name="loading_image_failed">Loading image failed</string>
    <string name="clear">Clear</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>

    <string name="password">password</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="ok">OK</string>
    <string name="sign_in">Sign in</string>
    <string name="prompt_info_title">SCSoft\'s Maker</string>
    <string name="prompt_info_description">指紋をスキャンしてください。</string>
    <string name="prompt_info_pin_description">PIN /パターン/パスワードを入力してシス​​テムにログインしてください</string>
    <string name="prompt_info_cancel">キャンセル</string>
    <string name="input_data">入力データ</string>
    <string name="done">完了</string>

    <string name="upload_images_success">写真がアップロードされました。</string>
    <string name="alert_remove_room">アルバムからこの撮影位置を削除してもよろしいでしょうか？</string>
    <string name="microphone">Microphone</string>
    <string name="alert_really_do_some_thing">削除てもよろしいでしょうか？</string>
    <string name="connect_internet_fail">インタネットに接続されていません。アプリを使用するにはWIFIまたはモバイルデータをオンにしてください。</string>
    <string name="forgot_password_successful">パスコードを変更するにはメールに送信されたリンクにクリックして、案内のように実施してください。</string>
    <string name="alert_setting_change_dont_save">行った変更が保存されない可能性があります。</string>
    <string name="unlock_by_faceID">FaceIDでロックを解除をします。</string>
    <string name="unlock_by_finger">指紋でロックを解除をします。</string>
    <string name="please_input_fields_missing">入力されていない項目を確認してください。</string>
    <string name="please_input_house_type">物件タイプを選択してください。</string>
    <string name="confirm_password_not_true">Password and Confirm password is not match!</string>
    <string name="alert_not_enough_space">メモリ空き容量不足</string>
    <string name="alert_uploading">アップロード中</string>
    <string name="alert_please_input_location_name">撮影位置を入力してください。</string>
    <string name="are_sure_to_do_delete_picture">この写真を削除してもよろしいでしょうか？</string>
    <string name="title_detail_picture">写真詳細</string>
    <string name="filter_customer">顧客</string>
    <string name="filter_house">ハウス</string>
    <string name="filter_new">新しい</string>
    <string name="filter_old">古い</string>
    <string name="list_house_no_item">アルバムがありません。画面右下の「+」ボタンにクリックすると新しいアルバムを作成できます。</string>
    <string name="add_video">動画追加</string>
    <string name="record_video">動画撮影</string>
    <string name="video_from_gallery">ギャラリーから動画</string>
    <string name="eraser">Eraser</string>
    <string name="opacity">Opacity</string>
</resources>
